<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FavoriteFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/favorites"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/search"
        android:imeOptions="actionSearch"
        android:singleLine="true"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_search"
        android:drawableEnd="@drawable/ic_baseline_search_24"
        app:layout_constraintTop_toBottomOf="@+id/textView">
    </EditText>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvImages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintTop_toBottomOf="@+id/etSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cyEmpty"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearch"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/ic_file_searching_rafiki"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorites_empty"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:textAlignment="center"
            android:padding="16dp"
            android:textSize="20sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>